--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@bytelabsco/ngx-color-selector": "^0.1.1",
     "@types/file-saver": "^2.0.0",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.0",
